--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,12 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 
 
+twilio.account.sid=${TWILIO_ACCOUNT_SID}
+twilio.auth.token=${TWILIO_AUTH_TOKEN}
+twilio.phone.number=${TWILIO_PHONE_NUMBER}
 
-twilio.phone.number=123
-twilio.account.sid=123
-twilio.auth.token=123
+
+frontend.base.url=hi
+
+server.error.include-stacktrace=never
+server.error.include-message=always
