--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,6 @@ frontend.base.url=hi
 
 server.error.include-stacktrace=never
 server.error.include-message=always
+
+
+geoapify.api.key=${YOUR_PLACES_API_KEY}
